--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(functionalGam)
 export(functionalPCA)
 export(plotCrossFOV)
 export(plotCrossMetricPerFov)
+export(plotFbPlot)
 export(plotFpca)
 export(plotMdl)
 export(plotMetricPerFov)
@@ -20,5 +21,7 @@ import(parallel)
 import(spatstat.explore)
 import(tidyr)
 importFrom(SummarizedExperiment,colData)
+importFrom(fda,fbplot)
+importFrom(graphics,title)
 importFrom(methods,is)
 importFrom(stats,terms)
